# Sovereign_Agentic_OS_with_HLF

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Dockerfile.base  README.md  README_NEEDS_REVERT.md  SESSION_HANDOVER.md  TODO.md  TODO_MASTER.md  acfs.manifest.yaml  alembic.ini  bootstrap_all_in_one.sh  copilot_changes.diff  docker-compose.yml  fix_lint.py  fix_lint2.py  fix_test.py  fix_test2.py  fix_test3.py  fix_test4.py  fix_test5.py  fix_test6.py  fix_test7.py  fix_test8.py  fix_test9.py  install.bat  mkdocs.yml  patch_query_memory.py  plan.md  pr50_diff.txt  pyproject.toml  requirements.txt  result.md  review.json  review.py  run.bat  run_test.py  setup.ps1  (+8 more)
.Jules/: palette.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.jules/: bolt.md  hats.md  sentinel.md
agents/: __init__.py
ci/: ensure-no-sandbox-in-prod.yml  validate_models.yml
config/: agent_registry.json  jules_tasks.yaml  redis.conf  settings.json
dapr/: config.yaml
docs/: AGENTS.md  AGENTS_CATALOG.md  Automated_Runner_Setup_Guide.md  HLF_GRAMMAR_REFERENCE.md  HLF_PROGRESS.md  HLF_REFERENCE.md  INSTINCT_REFERENCE.md  JULES_COORDINATION.md  README_UPDATE_INSTRUCTIONS.md  RFC_9000_SERIES.md  SECURITY_ARCHITECTURE.md  SESSION_HANDOVER.md  SOVEREIGN_SYSTEM_TRUTH.md  SYSTEM_ROSTER.md  Sovereign_OS_Master_Build_Plan.md  TESTING_GUIDE.md  TODO.md  UNIFIED_ECOSYSTEM_ROADMAP.md  WALKTHROUGH.md  benchmark.json  cli-tools.md  gen_from_spec.py  getting_started.md  handoff_zai_api_integration.md  hat_review_pr50.md  hlf_explainer.html  index.html  (+5 more)
(+365 files in other folders)
